<resources>
    <string name="app_name">IT-KOM</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="alibaba">Alibaba</string>
    <string name="meta">Meta</string>
    <string name="disney">Disney</string>
    <string name="microsoft">Microsoft</string>
    <string name="netflix">Netflix</string>
    <string name="tesla">Tesla</string>
    <string name="xiaomi">Xiaomi</string>
    <string name="samsung">Samsung</string>
    <string name="google_description">
        Google korporatsiyasining yaratilish tarixi. Google 1996 yil martda fan nomzodi Larri Peyj va Sergey Brin  tomonidan ilmiy loyiha sifatida paydo bo\'ldi. , Stenford talabalari Stenford Raqamli Kutubxona Loyihasida  (SDLP)  ishladilar.  SDLP  "Birlashtirilgan,  integratsiyalashgan  va universal raqamli kutubxona uchun ilg\'or texnologiyalarni ishlab chiqish" maqsadi bo\'lib,  boshqa  federal  agentliklar  qatorida  Milliy  ilmiy  jamg\'arma  tomonidan moliyalashtirilgan. Dissertatsiya mavzularini izlashda, Page, shu bilan bir qatorda,
        5  Umumjahon Internetning matematik xususiyatlarini o\'rganish, ulanishlar jadvalini ulkan grafik ko\'rinishida taqdim etish. Uning ilmiy rahbari Terri Vinograda ushbu g\'oyani tanlashni tavsiya qildi (Page keyinchalik u “men olgan eng yaxshi maslahat” deb nomlangan) va Page ushbu sonni va sonini hisobga olgan holda ushbu sahifaga qaysi  veb-sahifalarni ulashni  aniqlash  muammolariga  e\'tibor  qaratdi.  sahifadagi ma\'lumotlarning  ahamiyati  nuqtai  nazaridan  bunday  aloqalarning  tabiati  (ilmiy nashrlarda  iqtiboslar  roliga  o\'xshash).  BackRub  deb  nomlangan  ushbu  ilmiy loyihada  unga  tez  orada  f.f.d.  Sergey  Brin  qo\'shildi.  Stenford,  Milliy  Ilmiy Jamg\'arma  Bitiruvchilar  Hamkorligi  tomonidan  qo\'llab-quvvatlanadi.  Brin allaqachon  Peyjning  yaqin  do\'sti  edi, u  birinchi  marta  1995  yil yozida birinchi guruhda uchrashdi va Brin talabalar shaharchasini namoyish etishni xohladi. 1996 yil mart oyida qidiruv roboti Internet sahifalarini indekslashni boshladi, bu sahifa Stenfordning  bosh  sahifasidan  tuzilgan.  To\'plangan  ma\'lumotlarni  ushbu  veb-sahifaning muhimlik darajasiga o\'tkazish uchun Brin va Page PageRank algoritmini ishlab chiqdilar. Ushbu URL-ga bog\'lanishlar soni bo\'yicha tartiblangan URL-lar ro\'yxatidan iborat BackRub natijalarini tahlil qilgandan so\'ng, ular PageRank-ga asoslangan qidiruv mexanizmi mavjud qidiruv algoritmlariga qaraganda yaxshiroq natijalarga  olib  kelishini  angladilar  (o\'sha  paytda  mavjud  qidiruv  tizimlari sahifalarni saralashgan. qidiruv atamasi sahifada necha marta paydo bo\'lishi). Robin  Li  tomonidan  1996  yildan  beri  ishlab  chiqilgan  IDD  Information Services (Dow Jones sho\'\'ba korxonasi) tomonidan yaratilgan "RankDex"  kichik qidiruv  mexanizmi  shu kabi  sahifalar  reytingi  va  reyting strategiyasini o\'rganib chiqqan. Li Xitoyda Baidu kompaniyasini tashkil qilganida RankDex texnologiyasi patentlangan va keyinchalik ishlatilgan. Boshqa yuqori martabali sahifalar bilan eng ko\'p bog\'langan sahifalar qidiruvda eng  muhim bo\'lishi  kerakligiga  ishonch  hosil  qilib, Peyj va Brin dissertatsiyani tadqiqotning bir qismi sifatida sinab ko\'rishdi va ularni izlash uchun asos yaratdilar. 1997 yil boshida Backrub tavsifi sahifasi quyidagicha edi: Ba\'zi bir qo\'pol statistik ma\'lumotlar (1996 yil 29-avgustdan boshlab) Umumiy indekslangan  sahifalar:  75.2306  million Umumiy  yuklanishlar:  207.022
        6  gigabayt … BackRub  Java  va  Python-da  yozilgan  va  Linux-da ishlaydigan  Sun Ultra va Intel Pentium serverlarida ishlaydi. Asosiy ma\'lumotlar bazasi 28 GB disk bilan Sun Ultra II-da saqlanadi. Skott Xassan va Alan Steremberg ko\'plab iste\'dodli yordam ko\'rsatdilar. Sergey Brin ham faol ishtirok etdi va katta minnatdorchilikka loyiqdir.
        Google o\'zining birinchi moliyalashtirishini 1998 yil avgust oyida, marhum Sun  Microsystems  asoschilaridan  biri bo\'lgan  Andy  Bechtolheimdan $  100,000 shaklida oldi. Google rasmiy ravishda 1998 yil 4 sentyabrda Kaliforniyaning Menlo Park shahridagi do\'stlar garajida ro\'yxatdan o\'tgan. "Google" nomi "googol" so\'zidan kelib chiqadi, ya\'ni yuz nol bilan 1 raqamini anglatadi.  (Enid  Blyton  "Sehrli  Faravay  daraxti"  da  "Google  Bun"  iborasini ishlatgan (1943  yil  nashr etilgan). Kundalik tilda tobora ko\'proq  qo\'llaniladigan "google"  (en:  "google")  fe\'l  2006  yilda  Oksford  inglizcha  lug\'atiga  qo\'shilgan. "Internetni qidirishda Google-dan foydalanish" degan ma\'noni anglatadi. 1998 yil oxirida Google qariyb 60 million sahifani indeksladi. Bosh sahifada hali ham BETA yorlig\'i bor edi, ammo Salon.com saytidagi maqola Google qidiruv natijalari  Hotbot  yoki  Excite.com  kabi  boshqa  qidiruv  tizimlariga  qaraganda yaxshiroq ekanligi haqida xabar bergan va  google-ni  o\'zining ajoyib texnologik yangiliklari uchun maqtagan. Ko\'payib borayotgan dot-com pufagi paytida "tarmoq kelajagi"  sifatida  ko\'rilgan  (ayniqsa  Yahoo  !,  excite.com,  Lycos,  Netscap-ning Netcenter,  AOL  .com,  Go.com  va  MSN  .com)  saytlar,  ayniqsa  investorlar tomonidan "tarmoq kelajagi" sifatida ko\'rilgan. fond bozori. 1999 yil mart oyida kompaniya Palo Alto shahridagi 165 University Avenue filialiga  ko\'chib  o\'tdi,  u  erda  Silikon  vodiysining  boshqa  texnologik  startaplari joylashgan edi. Tez sur\'atlar bilan o\'sgandan so\'ng, kompaniya 1999 yilda Silikon Grafika  (SGI)  dan  1600  Amfiteatr  Parkway-da  Mountain  View-dagi  binolarni ijaraga oldi. Kompaniya o\'sha vaqtdan beri shu joyda turdi va shu vaqtdan boshlab kompleks Googleplex (Google noliga teng nol bilan teng bo\'lgan Googleplex) nomi bilan ma\'lum bo\'ldi. 2006 yilda Google SGIdan 319 million dollarga mol-mulk sotib oldi. Google  qidiruvi  Internetning  sodda  interfeysini  yaxshi  ko\'rgan  ko\'plab foydalanuvchilar orasida sodiq muxlislarni jalb qildi. 2000 yilda Google  qidiruv kalit so\'zlari bilan bog\'liq reklamalarni sotishni boshladi. Reklama matnli bo\'lib, sahifa  dizayniga  to\'sqinlik  qilmasdan  va  uni  yuklash  tezligini  kamaytirmasdan amalga  oshirildi.  Kalit  so\'zlar  narxlar  va  bosishlar  sonining  kombinatsiyasiga
        8  asoslangan holda, har bir bosish uchun 0,05 AQSh dollarini tashkil etadi. Ushbu kalit so\'zni reklama qilish modeli birinchi bo\'lib Goto.com tomonidan taklif qilingan (keyinchalik Yahoo! tomonidan sotib olingan va  Yahoo!  Search Marketing deb o\'zgartirilgan Overture Services nomini oldi). Garchi ko\'plab raqobatchilar yangi Internet bozoriga chiqa olmagan bo\'lsalar ham, Google jimgina o\'sib bormoqda.
    </string>
    <string name="apple_description">
        "Apple" – shaxsiy kompyuterlar, iPod audio-pleyerlar va dastur taʼminoti ishlab chiqaruvchi amerika korporatsiyasi. Shaxsiy kompyuterlar va zamonaviy grafikli interfaysga asoslangan koʻp vazifali operatsion tizimlar olamida boshlab berganlardan biri hisoblanadi. Bosh ofisi – Kupertino, Kaliforniya shtatida joylashgan.

        2007 yil 9 yanvargacha 30 yil davomida korporatsiya nomi “Apple Computer” edi.
        Kaliforniyada Steve Jobs va Steve Wozniak tomonidan asos solingan. 1970 yilning oʻrtalarida ular “Motorola 6502” prosessori bazasida birinchi shaxsiy kompyuterni ishlab chiqishadi. Oʻnlab shunday kompyuterlarni sotib, yosh tadbirkorlar moliyaviy daramod olishdi va 1 aprel 1976 yil da Kompaniyasini rasmiy roʻyxatdan oʻtkazishgan.1976 yilda ishlab chiqilgan “Apple I” birinchi dasturlashtiruvchi mikrokompyuter boʻlmagan. Birinchilik “Alʼtair 8800” kompyuteriga tegishli, 1974 yilda yaratilgan va kataloglardan tarqatilgan. Ammo, “Alʼtair” texnik tomondan “shaxsiy kompyuter” sifatida kvalifikatsiyalanman boʻlgan, chunki yigʻish imkoniyatiga ega boʻlmagan va dastur yordamida maʼlumotlarni chaqirish imkoniga ega boʻlmagan. Yillar davomida kompaniya “Motorola” prosessorli, firma tomonidan ishlab chiqilgan operatsion tizimli oʻzining “Macintosh” kompyuterlarini ishlab chiqarib kelgan.
        1980-yil noyabr oyida kompaniya kompyuterlarini bozorga chiqara boshlaydi va barcha kamchiliklar oʻzini namoyon eta boshlaydi. 1981 yil mart oyiga kelib etkazib berilgan kompyuterlarning 20 % i nosoz holda etkazilayotgani aniqlandi. Qolganlari esa yoqilishi bilan bir soat oʻtar oʻtmas boʻzilar edi, chunki Jobs ventilyator qoʻyishga ruxsat bermagan edi va mikrosxemalar temperatura oshishiga dosh bermas edi. 1981 yilning mart oyida Wozniak aftohalokatga uchraydi va vaqtinchalik ishlay olmaydi. “Apple III” ni sotish bilan bogʻliq muammolar shunga olib keldiki, Jobs oʻzning 40 ta ishchisini boʻshatishga majbur boʻladi. 1985 yilda AQSh prezidenti Ronald Reygan texnik progressni rivojlantirgani uchun Jobs va Wozniakga medal topshiradi.
        “Apple” – ommaviy kompaniya, uning aksiyalari NASDAQ va London fond birjalarida sotiladi. Kapitalisatsiya 2007 yil iyul oyi oʻrtalarida - $115,3 mlrdni tashkil etdi. Bosh boshqaruvchi – Steve Jobs.
        Kompaniya oʻzining bir qism mahsulotlarini oʻziga tegishli doʻkonlar tizimi orqali koʻtara sotadi. (AQSH, Kanada, Yaponiya va Buyuk Britaniya da 147 ta doʻkoniga ega). “Apple” 2005 yil 24 sentyabr moliyaviy yil yakunlariga koʻra oʻz doʻkonlaridan $2.35 mlrd daromad olgan, bu uning yillik savdo hajmining 17% ni tashkil etadi.

        Apple o‘zining mustaqil xizmat ko‘rsatish markazlari dasturini (IRP) 200 dan ortiq mamlakatlarda, shu jumladan, O‘zbekistonda ham ishga tushiradi. Dastur bosqichma-bosqich kengaytiriladi — O‘zbekiston esa ikkinchi bosqichda qamrab olinadi. Mamlakatdagi xizmat ko‘rsatish markazlari 2021-yilning oxirida IRP sifatida ro‘yxatdan o‘tish uchun ariza berishi mumkin bo‘ladi
        Hozirgi kunda Macintosh kompyuterlaridan tashqari (MacPro, iMac va Mac mini modellari, noutbuklar : MacBook va MacBook Pro, Xseve server ishlab chiqarish) shuningdek ularga dasturiy taʻminoti (Mac OS X, iLife,Final Cut, Aperture multimediya paketlari va boshqalar) ishlab chiqaradi. Apple iPod pleyerlari ishlab chiqaradi, shuningdek iTunes onlayn doʻkoni orqali raqamli audio va videoyozishlarni sotish bilan ham shugʻullanadi. Apple Cinema Display deb nomlanuvchi professional kompyuter displeylarini ham ishlab chiqaradi.

        2006 yil yanvar oyidan boshlab “Apple” kompaniyasi Intel prosessorli kompyuterlar ishlab chiqara boshladi.

        2007 yil 21 mart dan boshlab “Apple” HDTV video formatda ishlovchi Apple TVmultimediya pleyerlarni ishlab chiqara boshladi.

        2007 yil 29 iyundan “Apple” yangicha boshqarish usuli Multi – Touch ga asoslangan iPhone yangi telefonini sotishni boshladi.
    </string>
    <string name="todo">TODO</string>
    <string name="kompaniya_asoschisi">Kompaniya asoschisi</string>
    <string name="sergiy_brin">Sergiy Brin</string>
    <string name="kompaniya_haqida">Kompaniya haqida</string>
    <string name="boshqa_kompaniyalar">Boshqa kompaniyalar</string>
</resources>